test/errors/importer-missing-import-call/code.js
import useImportedHook from 'use-imported-hook'

export default function useTestHook() {
	return useImportedHook()
}
